--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
         <div class="slide-box first">
           <img
             class="img-desktop"
-            src="assets/images/angola-flag.jpg"
+            src="assets/images/desktop-1800px/angola-desktop.jpg"
             alt="angola-flag"
           />
           <img
             class="img-mobile"
-            src="assets/images/mobile/angola-flag.jpg"
+            src="assets/images/mobile/angola-mobile.JPG"
             alt="mobile angola-flag"
           />
         </div>
@@ -90,26 +90,26 @@
         <div class="slide-box">
           <img
             class="img-desktop"
-            src="assets/images/italia-flag-1280.jpg"
-            alt="angola-flag"
+            src="assets/images/desktop-1800px/portugal-desktop.jpg"
+            alt="portugal-flag"
           />
           <img
             class="img-mobile"
-            src="assets/images/mobile/italia-flag.jpg"
-            alt="mobile angola-flag"
+            src="assets/images/mobile/portugal-mobile.jpg"
+            alt="mobile portugal-flag"
           />
         </div>
 
         <div class="slide-box">
           <img
             class="img-desktop"
-            src="assets/images/portugal-flag-1280.jpg"
-            alt="angola-flag"
+            src="assets/images/desktop-1800px/china-desktop.jpg"
+            alt="china-flag"
           />
           <img
             class="img-mobile"
-            src="assets/images/mobile/portugal-flag.jpg"
-            alt="mobile angola-flag"
+            src="assets/images/mobile/china-mobile.jpg"
+            alt="mobile china-flag"
           />
         </div>
 
