--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/nav.css" />
     <link rel="stylesheet" href="assets/css/slider.css" />
-    <link rel="stylesheet" href="assets/css/section-noticias.css">
+    <link rel="stylesheet" href="assets/css/section-noticias.css" />
     <!-- Arquivos Js -->
     <script src="./assets/Js/slide.js" defer></script>
     <script src="assets/js/jquery-3.6.3.min.js" defer></script>
@@ -135,11 +135,147 @@
     <!-- Fim caroulsel -->
 
     <!-- Section notícias -->
-    <section id="noticias" class="noticias">
+    <header class="no-inheritance" id="noticias">
       <div class="header-noticias">
         <h1>Notícias</h1>
-        <a href="noticias-gerais.html" target="_self" rel="next">Ver todas notícias</a>
+        <a href="noticias-gerais.html" target="_self" rel="next"
+          >Ver todas notícias</a
+        >
       </div>
+    </header>
+    <section class="noticias">
+      <main class="section-content" id="section-content">
+        <div class="card">
+          <div class="banner">
+            <div class="info-container">
+              <div class="info-content">
+                <p>Resultados das candidaturas às Bolsas de Estudo Internas referente ao Ano Académico 2022-2023</p>
+              </div>
+            </div>
+          </div>
+          <p>
+            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum. -->
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <div class="banner"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+        <div class="card">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            provident cupiditate totam exercitationem aspernatur vel eligendi,
+            ullam praesentium qui ipsam iure, aliquam inventore consequatur
+            molestiae natus nihil nisi obcaecati. Ipsum.
+          </p>
+        </div>
+      </main>
     </section>
   </body>
 </html>
