--- a/index.html
+++ b/index.html
@@ -153,12 +153,14 @@
               </div>
             </div>
           </div>
-          <p>
-            <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum. -->
-          </p>
+          <div class="data-info">
+            <img src="assets/images/Flag_of_Angola.svg.png" alt="angola icon">
+            <p></p>
+          </div>
+          </div>
+          <div class="card-content">
+
+          </div>
         </div>
         <div class="card">
           <div class="banner"></div>
