--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           </div>
           <div class="data-info">
             <img src="assets/images/Flag_of_Angola.svg.png" alt="angola icon">
-            <p></p>
+            <time>Data da Publicação 23/02/2023</time>
           </div>
           </div>
           <div class="card-content">
