--- a/index.html
+++ b/index.html
@@ -157,125 +157,130 @@
             <img src="assets/images/Flag_of_Angola.svg.png" alt="angola icon">
             <time>Data da Publicação 23/02/2023</time>
           </div>
+          <div class="card-container">
+            <div class="card-content">
+              <p>
+                O Instituto Nacional de Gestão de Bolsas de Estudo (INAGBE), informa que estão disponíveis os resultados das candidaturas às Bolsas de Estudo Internas referente ao Ano Académico 2022-2023 no portal do...
+              </p>
+            </div>
           </div>
-          <div class="card-content">
+          <a href="#" rel="next" target="_self" class="card-btn">Ler mais</a>
+          </div>
+        </div>
 
+        <div class="card">
+          <div class="banner" id="banner2">
+            <div class="info-container">
+              <div class="info-content">
+                <p>RESULTADOS DAS CANDIDATURAS APRESENTADAS AO PROGRAMA DE BOLSAS DE ESTUDO EXTERNA DO GOVERNO CHINÊS -</p>
+              </div>
+            </div>
+          </div>
+          <div class="data-info">
+            <img src="assets/images/flag-of-china.png" alt="china icon">
+            <time>Data da Publicação 10/02/2023</time>
+          </div>
+          <div class="card-container">
+            <div class="card-content">
+              <p>
+                O Instituto Nacional de Gestão de Bolsas de Estudo (INAGBE), vem por este meio, informar aos candidatos que está disponível no site do INAGBE www.inagbe.gov.ao a Lista dos Candidatos Pré-seleccionados...
+              </p>
+            </div>
+          </div>
+          <a href="#" rel="next" target="_self" class="card-btn">Ler mais</a>
           </div>
         </div>
+
         <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
+          <div class="banner" id="banner3">
+            <div class="info-container">
+              <div class="info-content">
+                <p>EDITAL SOBRE O PROGRAMA DE BOLSAS DE ESTUDO DO GOVERNO HÚNGARO 2023-24</p>
+              </div>
+            </div>
+          </div>
+          <div class="data-info">
+            <img src="assets/images/flag-of-italy.png" alt="italy icon">
+            <time>Data da Publicação 02/02/2023</time>
+          </div>
+          <div class="card-container">
+            <div class="card-content">
+              <p>
+                O Instituto Nacional de Gestão de Bolsas de Estudo (INAGBE), vem por este meio, comunicar aos estudantes, docentes universitários e ao público em geral, que estão abertas candidaturas à bolsa de estudos...
+              </p>
+            </div>
+          </div>
+          <a href="#" rel="next" target="_self" class="card-btn">Ler mais</a>
+          </div>
         </div>
+        
         <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
+          <div class="banner" id="banner4">
+            <div class="info-container">
+              <div class="info-content">
+                <p>A CANDIDATURA AO PROGRAMA DE ENVIO ANUAL DE 300 LICENCIADOS OU MESTRES COM ELEVADO DESEMPENHO E MÉRI</p>
+              </div>
+            </div>
+          </div>
+          <div class="data-info">
+            <img src="assets/images/Flag_of_Angola.svg.png" alt="angola icon">
+            <time>Data da Publicação 30/01/2023</time>
+          </div>
+          <div class="card-container">
+            <div class="card-content">
+              <p>
+                O Ministério do Ensino Superior, Ciência, Tecnologia e Inovação vem, por este meio, tornar público que, de 30 de Janeiro a 31 de Março de 2023, estarão abertas as candidaturas às bolsas de estudo no âmbito do Programa de Envio Anual de 300 Licenciados/Mestres...
+              </p>
+            </div>
+          </div>
+          <a href="#" rel="next" target="_self" class="card-btn">Ler mais</a>
+          </div>
         </div>
+        
         <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
+          <div class="banner" id="banner2">
+            <div class="info-container">
+              <div class="info-content">
+                <p>CANDIDATURA AO PROGRAMA DE BOLSAS DE ESTUDO DO GOVERNO DA REPÚBLICA POPULAR DA CHINA 2023-2024</p>
+              </div>
+            </div>
+          </div>
+          <div class="data-info">
+            <img src="assets/images/flag-of-china.png" alt="china icon">
+            <time>Data da Publicação 28/11/2022</time>
+          </div>
+          <div class="card-container">
+            <div class="card-content">
+              <p>
+                O Instituto Nacional de Gestão de Bolsas de Estudo (INAGBE), vem por este meio, comunicar aos estudantes, docentes universitários e ao público em geral, que está aberta a candidatura à bolsa de estudos...
+              </p>
+            </div>
+          </div>
+          <a href="#" rel="next" target="_self" class="card-btn">Ler mais</a>
+          </div>
         </div>
+
         <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <div class="banner"></div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
-        </div>
-        <div class="card">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus
-            provident cupiditate totam exercitationem aspernatur vel eligendi,
-            ullam praesentium qui ipsam iure, aliquam inventore consequatur
-            molestiae natus nihil nisi obcaecati. Ipsum.
-          </p>
+          <div class="banner" id="banner5">
+            <div class="info-container">
+              <div class="info-content">
+                <p>EDITAL STIPENDIUM HUNGARICUM PARA APLICAÇÃO 2023-2024</p>
+              </div>
+            </div>
+          </div>
+          <div class="data-info">
+            <img src="assets/images/flag-of-china.png" alt="china icon">
+            <time>Data da Publicação 15/11/2022</time>
+          </div>
+          <div class="card-container">
+            <div class="card-content">
+              <p>
+                O Instituto Nacional de Gestão de Bolsas de Estudo (INAGBE), vem por este meio, comunicar aos estudantes, docentes universitários e ao público em geral, que está aberta a candidatura à bolsa de estudo...
+              </p>
+            </div>
+          </div>
+          <a href="#" rel="next" target="_self" class="card-btn">Ler mais</a>
+          </div>
         </div>
       </main>
     </section>
