--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="assets/js/jquery-3.6.3.min.js" defer></script>
     <script src="assets/Js/header.js" defer></script>
     <script src="assets/Js/scrolTop.js" defer></script>
+    <script src="assets/Js/menu.js" defer></script>
     <title>Bolsas Ao</title>
   </head>
   <body>
@@ -50,7 +51,7 @@
         <div class="logo">
           <h1>BolsasAo</h1>
         </div>
-        <ul>
+        <ul class="">
           <li><a href="#" rel="next" target="_parent">Home</a></li>
           <li><a href="#noticias" rel="next" target="_parent">Notícias</a></li>
           <li class="sub-menu">
@@ -70,6 +71,9 @@
             id="search-box"
             placeholder="Que tipo de vaga procura?"
           />
+        </div>
+        <div class="menu">
+          <img src="assets/icons/icon.png" alt="menu" >
         </div>
       </div>
     </nav>
