implementando formulário de login

--- a/login.html
+++ b/login.html
@@ -110,6 +110,11 @@
             <label for="email">Email</label>
             <input type="email" name="emailtxt" id="emailtxt" placeholder="exemplo@gmail.com" autofocus autocomplete="email" required>
             <input type="password" name="senhatxt" id="senhatxt"  minlength="8" autocomplete="current-password" required>
+            <input type="submit" value="Login">
+            <div class="aditional-link">
+                <a href="#" rel="next" target="_blank">Esqueceu a senha</a>
+                <a href="#" rel="next" target="_blank">Criar conta</a>
+            </div>
         </form>
     </main>
     <!-- Fim form section -->
