--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
           <h1>BolsasAo</h1>
         </div>
         <ul class="">
-          <li><a href="#" rel="next" target="_parent">Home</a></li>
+          <li><a href="./index.html" rel="next" target="_parent">Home</a></li>
           <li><a href="#noticias" rel="next" target="_parent">Notícias</a></li>
           <li class="sub-menu">
-            <a href="#" rel="next" target="_parent">Bolsas</a>
+            <a href="bolsas.html" rel="next" target="_parent">Bolsas</a>
             <ul>
               <li><a href="#" rel="next" target="_self">Disponíveis</a></li>
               <li><a href="#" rel="next" target="_self">Internas</a></li>
               <li><a href="#" rel="next" target="_self">Externas</a></li>
             </ul>
           </li>
-          <li><a href="#" rel="next" target="_parent">Sobre</a></li>
+          <li><a href="sobre.html" rel="next" target="_parent">Sobre</a></li>
         </ul>
         <div class="search-box">
           <input
