--- a/login.html
+++ b/login.html
@@ -104,19 +104,26 @@
     <!-- Fim Section  -->
 
     <!-- form section -->
-    <main class="form">
+    <section id="form">
         <h1>Efectuar Login</h1>
+
         <form action="formhandle.php" method="post">
-            <label for="email">Email</label>
+            <label for="emailtxt">Email</label><br>
+
             <input type="email" name="emailtxt" id="emailtxt" placeholder="exemplo@gmail.com" autofocus autocomplete="email" required>
-            <input type="password" name="senhatxt" id="senhatxt"  minlength="8" autocomplete="current-password" required>
+
+            <label for="senhatxt">Palavra Passe</label>
+
+            <input type="password" name="senhatxt" id="senhatxt"  minlength="8" autocomplete="current-password" placeholder="mínimo 8 caracteres" required>
+
             <input type="submit" value="Login">
+
             <div class="aditional-link">
-                <a href="#" rel="next" target="_blank">Esqueceu a senha</a>
-                <a href="#" rel="next" target="_blank">Criar conta</a>
+                <a href="recuperar-senha.html" rel="next" target="_blank">Esqueceu a senha</a>
+                <a href="criar-conta.html" rel="next" target="_blank">Criar conta</a>
             </div>
         </form>
-    </main>
+    </section>
     <!-- Fim form section -->
 
     <!-- Footer -->
