--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/slider.css" />
     <link rel="stylesheet" href="assets/css/section-noticias.css" />
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/fonts/general.css">
     <!-- Arquivos Js -->
     <script src="./assets/Js/slide.js" defer></script>
     <script src="assets/js/jquery-3.6.3.min.js" defer></script>
