--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/footer.css" />
     <link rel="stylesheet" href="assets/css/login-banner.css" />
     <link rel="stylesheet" href="assets/css/login-form-section.css" />
+    <link rel="stylesheet" href="assets/fonts/general.css">
     <!-- Arquivos Js -->
     <script src="./assets/Js/slide.js" defer></script>
     <script src="assets/js/jquery-3.6.3.min.js" defer></script>
