--- a/index.html
+++ b/index.html
@@ -23,49 +23,74 @@
   </head>
   <body>
     <!-- header -->
-    <header>
-      <div class="header-container">
-        <section class="left">
-          <div class="contacts">
+    <header class="header">
+
+      <div class="header__div">
+
+        <section class="header__div__sectionLeft">
+
+          <div class="header__div__sectionLeft__contacts">
             <p>Contactos de suporto</p>
             <p>+244 999999999</p>
           </div>
-          <address class="address">
+
+          <address class="header__div__sectionLeft__address">
             <p>Nossa localização</p>
             <p>Angola, Luanda</p>
           </address>
-          <div class="email">
+
+          <div class="header__div__sectionLeft__addressEmail">
             <p>Contacto email</p>
             <p>info.bolsas@gmail.com</p>
           </div>
+
         </section>
-        <section class="right">
+
+        <section class="header__div__sectionRight">
           <a href="login.html" rel="next" target="_self">Login</a>
           <a href="cadastro.html" rel="next" target="_self">Cadastro</a>
         </section>
+
       </div>
+
     </header>
     <!-- Fim header -->
 
     <!-- Navbar -->
     <nav>
+
       <div class="nav-container">
+
         <div class="logo">
           <h1>BolsasAo</h1>
         </div>
+
         <ul class="">
-          <li><a href="./index.html" rel="next" target="_parent">Home</a></li>
-          <li><a href="#noticias" rel="next" target="_parent">Notícias</a></li>
+          <li>
+            <a href="./index.html" rel="next" target="_parent">Home</a>
+          </li>
+          <li>
+            <a href="#noticias" rel="next" target="_parent">Notícias</a>
+          </li>
           <li class="sub-menu">
             <a href="bolsas.html" rel="next" target="_parent">Bolsas</a>
             <ul>
-              <li><a href="#" rel="next" target="_self">Disponíveis</a></li>
-              <li><a href="#" rel="next" target="_self">Internas</a></li>
-              <li><a href="#" rel="next" target="_self">Externas</a></li>
+              <li>
+                <a href="#" rel="next" target="_self">Disponíveis</a>
+              </li>
+              <li>
+                <a href="#" rel="next" target="_self">Internas</a>
+              </li>
+              <li>
+                <a href="#" rel="next" target="_self">Externas</a>
+              </li>
             </ul>
           </li>
-          <li><a href="sobre.html" rel="next" target="_parent">Sobre</a></li>
+          <li>
+            <a href="sobre.html" rel="next" target="_parent">Sobre</a>
+          </li>
         </ul>
+
         <div class="search-box">
           <input
             type="text"
@@ -74,9 +99,11 @@
             placeholder="Que tipo de vaga procura?"
           />
         </div>
+
         <div class="menu">
           <img src="assets/icons/icon.png" alt="menu" >
         </div>
+        
       </div>
     </nav>
     <!-- Fim Navbar -->
