arquitectura BEM nav

--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
     <!-- Fim header -->
 
     <!-- Navbar -->
-    <nav>
+    <nav class="nav">
 
-      <div class="nav-container">
+      <div class="nav__container">
 
-        <div class="logo">
+        <div class="nav__container__logo">
           <h1>BolsasAo</h1>
         </div>
 
-        <ul class="">
+        <ul class="nav__container__ul">
           <li>
             <a href="./index.html" rel="next" target="_parent">Home</a>
           </li>
           <li>
             <a href="#noticias" rel="next" target="_parent">Notícias</a>
           </li>
-          <li class="sub-menu">
+          <li class="nav__container__ul__sub-menu">
             <a href="bolsas.html" rel="next" target="_parent">Bolsas</a>
             <ul>
               <li>
@@ -91,7 +91,7 @@
           </li>
         </ul>
 
-        <div class="search-box">
+        <div class="nav__container__search-box">
           <input
             type="text"
             name="search-box"
@@ -103,7 +103,7 @@
         <div class="menu">
           <img src="assets/icons/icon.png" alt="menu" >
         </div>
-        
+
       </div>
     </nav>
     <!-- Fim Navbar -->
