--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
 
     <!-- caroulsel -->
     <section class="slider">
-      <div class="slider-content">
-        <input type="radio" name="btn-radio" id="radio1" />
-        <input type="radio" name="btn-radio" id="radio2" />
-        <input type="radio" name="btn-radio" id="radio3" />
+      <div class="slider__content">
+        <input type="radio" name="btn-radio" id="radio1" class="slider__content__input"/>
+        <input type="radio" name="btn-radio" id="radio2" class="slider__content__input"/>
+        <input type="radio" name="btn-radio" id="radio3" class="slider__content__input"/>
 
         <div class="slide-box first">
           <img
-            class="img-desktop"
+            class="slide-box__img-desktop"
             src="assets/images/desktop-1800px/angola-full.jpg"
             alt="angola-flag"
           />
           <img
-            class="img-mobile"
+            class="slide-box__img-mobile"
             src="assets/images/mobile/angola-mobile.JPG"
             alt="mobile angola-flag"
           />
@@ -130,12 +130,12 @@
 
         <div class="slide-box">
           <img
-            class="img-desktop"
+            class="slide-box__img-desktop"
             src="assets/images/desktop-1800px/portugal-full.jpg"
             alt="portugal-flag"
           />
           <img
-            class="img-mobile"
+            class="slide-box__img-mobile"
             src="assets/images/mobile/portugal-mobile.jpg"
             alt="mobile portugal-flag"
           />
@@ -143,12 +143,12 @@
 
         <div class="slide-box">
           <img
-            class="img-desktop"
+            class="slide-box__img-desktop"
             src="assets/images/desktop-1800px/china-full.jpg"
             alt="china-flag"
           />
           <img
-            class="img-mobile"
+            class="slide-box__img-mobile"
             src="assets/images/mobile/china-mobile.jpg"
             alt="mobile china-flag"
           />
