--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         </div>
 
         <div class="manual-nav">
-          <label for="radio1" class="manual-btn"></label>
-          <label for="radio2" class="manual-btn"></label>
-          <label for="radio3" class="manual-btn"></label>
+          <label for="radio1" class="manual-nav__manual-btn"></label>
+          <label for="radio2" class="manual-nav__manual-btn"></label>
+          <label for="radio3" class="manual-nav__manual-btn"></label>
         </div>
       </div>
     </section>
