--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/footer.css" />
     <link rel="stylesheet" href="assets/css/login-banner.css" />
     <link rel="stylesheet" href="assets/css/login-form-section.css" />
-    <link rel="stylesheet" href="assets/fonts/general.css">
+    <link rel="stylesheet" href="assets/fonts/general.css" />
     <!-- Arquivos Js -->
     <script src="./assets/Js/slide.js" defer></script>
     <script src="assets/js/jquery-3.6.3.min.js" defer></script>
@@ -23,54 +23,66 @@
   </head>
   <body>
     <!-- header -->
-    <header>
-      <div class="header-container">
-        <section class="left">
-          <div class="contacts">
+    <header class="header">
+      <div class="header__div">
+        <section class="header__div__sectionLeft">
+          <div class="header__div__sectionLeft__contacts">
             <p>Contactos de suporto</p>
             <p>+244 999999999</p>
           </div>
-          <address class="address">
+
+          <address class="header__div__sectionLeft__address">
             <p>Nossa localização</p>
             <p>Angola, Luanda</p>
           </address>
-          <div class="email">
+
+          <div class="header__div__sectionLeft__addressEmail">
             <p>Contacto email</p>
             <p>info.bolsas@gmail.com</p>
           </div>
         </section>
-        <section class="right">
+
+        <section class="header__div__sectionRight">
           <a href="login.html" rel="next" target="_self">Login</a>
           <a href="cadastro.html" rel="next" target="_self">Cadastro</a>
         </section>
       </div>
     </header>
-    <!-- Fim header -->
 
     <!-- Navbar -->
-    <nav>
-      <div class="nav-container">
-        <div class="logo">
+    <nav class="nav">
+      <div class="nav__container">
+        <div class="nav__container__logo">
           <h1>BolsasAo</h1>
         </div>
-        <ul class="">
-          <li><a href="./index.html" rel="prev" target="_self">Home</a></li>
+
+        <ul class="nav__container__ul">
           <li>
-            <a href="./index.html/#noticias" rel="prev" target="_self"
-              >Notícias</a
-            >
+            <a href="./index.html" rel="next" target="_parent">Home</a>
           </li>
-          <li class="sub-menu">
-            <a href="#" rel="next" target="_self">Bolsas</a>
+          <li>
+            <a href="#noticias" rel="next" target="_parent">Notícias</a>
+          </li>
+          <li class="nav__container__ul__sub-menu">
+            <a href="bolsas.html" rel="next" target="_parent">Bolsas</a>
             <ul>
-              <li><a href="#" rel="next" target="_self">Disponíveis</a></li>
-              <li><a href="#" rel="next" target="_self">Internas</a></li>
-              <li><a href="#" rel="next" target="_self">Externas</a></li>
+              <li>
+                <a href="#" rel="next" target="_self">Disponíveis</a>
+              </li>
+              <li>
+                <a href="#" rel="next" target="_self">Internas</a>
+              </li>
+              <li>
+                <a href="#" rel="next" target="_self">Externas</a>
+              </li>
             </ul>
           </li>
-          <li><a href="#" rel="next" target="_self">Sobre</a></li>
+          <li>
+            <a href="sobre.html" rel="next" target="_parent">Sobre</a>
+          </li>
         </ul>
-        <div class="search-box">
+
+        <div class="nav__container__search-box">
           <input
             type="text"
             name="search-box"
@@ -78,6 +90,7 @@
             placeholder="Que tipo de vaga procura?"
           />
         </div>
+
         <div class="menu">
           <img src="assets/icons/icon.png" alt="menu" />
         </div>
@@ -106,24 +119,58 @@
 
     <!-- form section -->
     <section id="form">
-        <h1>Efectuar Login</h1>
+      <h1>Efectuar Login</h1>
 
-        <form action="formhandle.php" method="post">
-            <label for="emailtxt">Email</label><br>
+      <form action="formhandle.php" method="post">
+        <label for="emailtxt">Email</label><br />
 
-            <input type="email" name="emailtxt" id="emailtxt" placeholder="exemplo@gmail.com" autofocus autocomplete="email" required>
+        <input
+          type="email"
+          name="emailtxt"
+          id="emailtxt"
+          placeholder="exemplo@gmail.com"
+          autofocus
+          autocomplete="email"
+          required
+        />
 
-            <label for="senhatxt">Palavra Passe</label>
+        <label for="senhatxt">Palavra Passe</label>
 
-            <input type="password" name="senhatxt" id="senhatxt"  minlength="8" autocomplete="current-password" placeholder="mínimo 8 caracteres" required>
+        <input
+          type="password"
+          name="senhatxt"
+          id="senhatxt"
+          minlength="8"
+          autocomplete="current-password"
+          placeholder="mínimo 8 caracteres"
+          required
+        />
 
-            <input type="submit" value="Login">
+        <input type="submit" value="Login" />
 
-            <div class="aditional-link">
-                <a href="recuperar-senha.html" rel="next" target="_blank">Esqueceu a senha</a>
-                <a href="criar-conta.html" rel="next" target="_blank">Criar conta</a>
-            </div>
-        </form>
+        <div class="aditional-link">
+          <a href="recuperar-senha.html" rel="next" target="_blank"
+            >Esqueceu a senha</a
+          >
+          <a href="criar-conta.html" rel="next" target="_blank">Criar conta</a>
+        </div>
+        <div class="links">
+          <a
+            href="recuperar-senha.php"
+            rel="next"
+            target="_blank"
+            class="links__first links--state-hover"
+            >Esqueceu a senha</a
+          >
+          <a
+            href="criar-conta.php"
+            rel="next"
+            target="_blank"
+            class="links__second"
+            >Criar conta</a
+          >
+        </div>
+      </form>
     </section>
     <!-- Fim form section -->
 
