--- a/cadastro.html
+++ b/cadastro.html
@@ -187,17 +187,17 @@
     <!-- Fim form section -->
 
     <!-- Footer -->
-    <footer>
-      <section class="top">
-        <div class="top-content">
-          <div class="supporte">
+    <footer class="footer">
+      <section class="footer__top">
+        <div class="top__top-content">
+          <div class="top-content__supporte">
             <h2>Supporte</h2>
             <p>Portal BolsasAo</p>
             <p>
               <small>+244 999999999/999999999</small>
             </p>
           </div>
-          <div class="newsletter">
+          <div class="top-content__newsletter">
             <h2>Newsletter</h2>
             <p>
               Mantenha-se actualizado com nossas ofertas de <br />
@@ -218,7 +218,7 @@
         </div>
       </section>
       <section class="bottom">
-        <div class="bottom-content">
+        <div class="bottom__bottom-content">
           <p>
             &copy;2023 <span class="destaque">BolsasAo</span> feito por wagner |
             All rights reserved
