--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <script src="assets/Js/header.js" defer></script>
     <script src="assets/Js/scrolTop.js" defer></script>
     <script src="assets/Js/menu.js" defer></script>
-    <title>Bolsas Ao</title>
+    <title>Login</title>
   </head>
   <body>
     <!-- header -->
@@ -118,11 +118,11 @@
     <!-- Fim Section  -->
 
     <!-- form section -->
-    <section id="form">
+    <section id="form-section">
       <h1>Efectuar Login</h1>
 
-      <form action="formhandle.php" method="post">
-        <label for="emailtxt">Email</label><br />
+      <form action="formhandle.php" method="post" class="form">
+        <label for="emailtxt" class="form__label">Email</label><br />
 
         <input
           type="email"
@@ -131,10 +131,10 @@
           placeholder="exemplo@gmail.com"
           autofocus
           autocomplete="email"
-          required
+          required class="form__input"
         />
 
-        <label for="senhatxt">Palavra Passe</label>
+        <label for="senhatxt" class="form__label">Palavra Passe</label>
 
         <input
           type="password"
@@ -143,18 +143,12 @@
           minlength="8"
           autocomplete="current-password"
           placeholder="mínimo 8 caracteres"
-          required
+          required class="form__input"
         />
 
-        <input type="submit" value="Login" />
+        <input type="submit" value="Login" class="form__submit-buttom" />
 
-        <div class="aditional-link">
-          <a href="recuperar-senha.html" rel="next" target="_blank"
-            >Esqueceu a senha</a
-          >
-          <a href="criar-conta.html" rel="next" target="_blank">Criar conta</a>
-        </div>
-        <div class="links">
+        <div class="form__links">
           <a
             href="recuperar-senha.php"
             rel="next"
