--- a/cadastro.html
+++ b/cadastro.html
@@ -64,7 +64,7 @@
             <a href="#noticias" rel="prev" target="_parent">Notícias</a>
           </li>
           <li class="nav__container__ul__sub-menu">
-            <a href="bolsas.html" rel="next" target="_parent">Bolsas</a>
+            <a href="#" rel="next" target="_parent">Bolsas</a>
             <ul>
               <li>
                 <a href="#" rel="next" target="_self">Disponíveis</a>
